# comfoclime

./: .copilot-coding-agent.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BACKEND_COMPLIANCE_REPORT.md  CHANGELOG.md  CLIMATE_ATTRIBUTES.md  CLIMATE_IMPLEMENTATION.md  CLIMATE_REVIEW_COPILOT.md  CLIMATE_USAGE_GUIDE.md  CONFIG_FLOW_CHANGES.md  ComfoClimeAPI.md  DATACLASS_IMPROVEMENTS_SUMMARY.md  DEBUG_LOGGING_GUIDE.md  ENTITY_DEFINITIONS_SUMMARY.md  ENTITY_SELECTION.md  ENTITY_STRATEGY.md  FIX_SUMMARY.md  HVAC_ACTION_UPDATE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_DEBUG_LOGGING.md  MODELS_README.md  MODERNIZATION_SUMMARY.md  NAVIGATION_FLOW.md  PHASE5_VALIDATION_SUMMARY.md  PYDANTIC_EVALUATION.md  PYDANTIC_MIGRATION_COMPLETE.md  PYDANTIC_MIGRATION_SUMMARY.md  PYTHON_BEST_PRACTICES.md  README.md  REMAINING_TEST_FIXES.md  REVERSE_ENGINEERING_OVERVIEW.md  SCENARIO_MODES.md  SECURITY_VALIDATION.md  TEMPERATURE_STATUS_FIX.md  TESTING_IMPROVEMENTS.md  TEST_CLIMATE_README.md  TROUBLESHOOTING.md  coverage.xml  (+15 more)
.devcontainer/: README.md  SETUP_COMPLETE.md  TEST_REPORT.md  automations.yaml  configuration.yaml  devcontainer.json  scenes.yaml  scripts.yaml  setup-tunnel.sh  setup.sh  start-ha.sh
.devcontainer/ha-config/: home-assistant.log.1  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal
.github/: ai-notes.md  copilot-instructions.md
.github/workflows/: ci.yml  main.yml  prerelease.yml  release.yml  ruff.yml  tests.yml  validate.yml
custom_components/comfoclime/: AGENTS.md  __init__.py  access_tracker.py  api_decorators.py  climate.py  comfoclime_api.py  config_flow.py  constants.py  coordinator.py  entity_base.py  entity_helper.py  fan.py  manifest.json  models.py  number.py  rate_limiter_cache.py  select.py  sensor.py  services.py  services.yaml  switch.py  test.py  validators.py
docs/: AGENTS.md  API Beschreibung.md  CLASS_METHOD_REFERENCE.md  CLEANUP_RECOMMENDATIONS.md  DEPENDENCY_MATRIX.md  ENTITY_DEFINITIONS.md  README.md  code_analysis.json
docs/migration/: PYDANTIC_MIGRATION.md
examples/: climate_attributes_usage.py
scripts/: lint.sh
tests/: conftest.py  conftest_real_device.py  record_device_responses.py  test_access_tracker.py  test_api.py  test_api_decorators.py  test_caching.py  test_climate.py  test_config_flow.py  test_config_flow_monitoring.py  test_coordinator.py  test_entity_definition_bases.py  test_entity_helper.py  test_exceptions.py  test_fan.py  test_init.py  test_models.py  test_number.py  test_project_metadata.py  test_real_device_integration.py  test_select.py  test_sensor.py  test_sensor_definitions.py  test_switch.py  test_timeout_retry.py  test_uuid_deadlock_fix.py  test_validators.py
(+44 files in other folders)
